crates/dq-cli/tests/snapshots/golden__04_helm_values.yaml.snap
---
source: crates/dq-cli/tests/golden.rs
expression: combined
---
exit_code: 0
--- stdout ---
: object
/image: object
/image/repository: string
/image/tag: string
/image/pullPolicy: string
/service: object
/service/type: string
/service/port: int
/resources: object
--- stderr ---
