crates/dq-cli/tests/snapshots/golden__12_top_level_array.json.snap
---
source: crates/dq-cli/tests/golden.rs
expression: combined
---
exit_code: 0
--- stdout ---
: array
/0: object
/0/id: int
/0/name: string
/1: object
/1/id: int
/1/name: string
/2: object
/2/id: int
/2/name: string
--- stderr ---
